# Rust-Static-Analyzer

./: COPYRIGHT  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  rule-implementation.md  rule.yml  task.yml
crates/cargo_ha_lint/: Cargo.toml
crates/cargo_ha_lint/src/: cli.rs  config.rs  main.rs  output.rs
crates/ha_lint_core/: Cargo.toml
crates/ha_lint_core/src/: engines.rs  lib.rs  model.rs
crates/rust-sa-cli/src/: lib.rs
crates/rust-sa-core/src/: findings.rs  lib.rs  sarif.rs
crates/rust-sa-rules/src/: lib.rs
docs/: ARCHITECTURE.md  MISRA-ADDENDUM6-MAPPING.md  development-setup.md  rule-catalog.md  traceability.md
docs/misra/: overview.md
docs/policies/: safety-comments
docs/rules/: HA-RUST-0001.md  HA-RUST-0010.md  HA-RUST-0021  HA-RUST-0022  HA-RUST-0023
rulesets/misra/: Notes  misra_applicability.toml
