[package]
name = "cargo-ha-lint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-ha-lint"
path = "src/main.rs"

[dependencies]
ha_lint_core = { path = "../ha_lint_core" }

clap = {version = "4.5", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
